Refactor MCP server validation and improve URL logging; enhance encoding handling for OAuth token requests